--- a/src/components/Person/styles.scss
+++ b/src/components/Person/styles.scss
@@ -1,7 +1,8 @@
 @import "../../Scss/main.scss";
 
 .personContainer {
-  max-height: 533px;
+  //max-height: 533px;
+  padding-bottom: 40px;
 }
 
 img {
@@ -13,8 +14,13 @@ img {
   object-fit: contain;
 
 //   width: 435px;
-width: 375px;
+
   height: 411px;
+  width: 100%;
+
+  @include breakpoint-sm {
+    //width: 375px;
+  }
 
   @include breakpoint-md {
       width: 435px;
@@ -45,8 +51,8 @@ width: 375px;
 }
 
 .bmiDescription {
-  width: 465px;
-  height: 308px;
+  
+  //height: 308px;
   //margin-top: 180px;
 
   margin-top: 60px;
@@ -55,6 +61,16 @@ width: 375px;
 
   @include breakpoint-md {
     // margin-top: 180px;
+    //width: 465px;
+    width: 100%;
+  }
+
+@include breakpoint-lg {
+  margin-top: 180px;
+}
+
+  @include breakpoint-xl {
+    margin-top: 250px;
   }
 }
 
